--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^19.1.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1",
     "sass": "^1.89.1"
   },
   "devDependencies": {
