--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^19.1.0",
     "react-paginate": "^8.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "sass": "^1.89.1"
   },
